# iscore-addon-remotecontrol

./: .gitignore  CMakeLists.txt  addon.json  iscore_addon_remotecontrol.cpp  iscore_addon_remotecontrol.hpp
Deployment/: localaddon.json
RemoteControl/: ApplicationPlugin.cpp  ApplicationPlugin.hpp  DocumentPlugin.cpp  DocumentPlugin.hpp
RemoteControl/Scenario/: Constraint.cpp  Constraint.hpp  Event.cpp  Event.hpp  Loop.cpp  Loop.hpp  LoopFactory.cpp  LoopFactory.hpp  Process.cpp  Process.hpp  Scenario.cpp  Scenario.hpp  ScenarioFactory.cpp  ScenarioFactory.hpp  State.cpp  State.hpp  TimeNode.cpp  TimeNode.hpp
RemoteControl/Settings/: Factory.cpp  Factory.hpp  Model.cpp  Model.hpp  Presenter.cpp  Presenter.hpp  View.cpp  View.hpp
i-score-remote/: RemoteApplication.cpp  RemoteApplication.hpp  i-score-remote.pro  main.cpp
i-score-remote/resources/: MainForm.ui.qml  main.qml
